Add retrieve and save global cases from room

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -121,6 +121,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#4CAF50"
+                    android:text="0"
                     android:textSize="24dp" />
 
             </LinearLayout>
@@ -156,6 +157,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#F44336"
+                    android:text="0"
                     android:textSize="24dp" />
 
             </LinearLayout>
